# tuigotchi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  bacon.toml  release-please-config.json
.claude/: settings.json
.githooks/: commit-msg
.github/workflows/: ci.yml  conventional-commits.yml  release-please.yml
crates/combat/: Cargo.toml
crates/combat/src/: battle.rs  boss.rs  combat_profile.rs  enemy.rs  explore_state.rs  lib.rs  manual_combat.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  event.rs  game_state.rs  lib.rs  offline.rs  pet.rs  save.rs  tick.rs
crates/items/: Cargo.toml
crates/items/src/: inventory.rs  item.rs  lib.rs  loot.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs  skill.rs  tree.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  theme.rs  ui.rs
crates/tui/src/screens/: boss_fight.rs  camp.rs  explore.rs  inventory.rs  mod.rs  shared.rs  skills.rs
wiki/: index.md  schema.md
wiki/architecture/: core-tui-separation.md  event-system.md  v2-readiness.md  workspace-layout.md
wiki/feedback/: gameplay-ideas.md  ux-notes.md
wiki/game-design/: actions.md  ascii-art.md  future-combat.md  idle-loop.md  pet-lifecycle.md  stats-and-decay.md
wiki/product/: release-process.md  roadmap.md  tech-stack.md
