[package]
name = "tuigotchi-combat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Combat system for tuigotchi — enemies, battles, leveling"

[dependencies]
serde.workspace = true
rand.workspace = true
