[package]
name = "tuigotchi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core game logic for tuigotchi — no TUI dependencies"

[dependencies]
