[package]
name = "tuigotchi-items"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Item and inventory system for tuigotchi — loot drops, equipment, modifiers"

[dependencies]
serde.workspace = true
rand.workspace = true

[dev-dependencies]
serde_json.workspace = true
