[package]
name = "tuigotchi-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Skill tree system for tuigotchi"

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
