[package]
name = "tuigotchi-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal UI for tuigotchi"

[dependencies]
tuigotchi-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dirs.workspace = true
